Fixed a small bug in default_value

--- a/cookbooks/npm/templates/default/.npmrc.erb
+++ b/cookbooks/npm/templates/default/.npmrc.erb
@@ -2,6 +2,6 @@ loglevel=warn
 <% if !@confvars[:registry].nil? %>
 registry=<%= @confvars[:registry] %>
 <% end %>
-<% if @confvars[:sslVerify] == false %>
+<% if @confvars[:sslVerify] === false %>
 strict-ssl=false
 <% end %>
